--- a/tools/angular.json
+++ b/tools/angular.json
@@ -20,7 +20,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/tools",
+            "outputPath": "../pay-tools",
+            "baseHref": "/pay-tools/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
